# Lab2

./: CMakeLists.txt  DynamicArray.cpp  DynamicArray.h  DynamicArraySequence.h  LinForm.cpp  LinForm.h  LinkedList.cpp  LinkedList.h  LinkedListSequence.h  Polynomial.cpp  Polynomial.h  Sequence.h  Tests.cpp  Tests.h  Vector.h  baseFunc.cpp  baseFunc.h  main.cpp  menu.cpp  menu.h  menuLinForm.cpp  menuLinForm.h  menuVector.cpp  menuVector.h  test.cpp  test.h
