cmake_minimum_required(VERSION 3.17)
project(Lab2)

set(CMAKE_CXX_STANDARD 14)

add_executable(Lab2 main.cpp DynamicArray.cpp DynamicArray.h LinkedList.cpp LinkedList.h Sequence.h LinkedListSequence.h DynamicArraySequence.h Lab2/Tests.cpp Lab2/Tests.h Vector.h menuVector.cpp menuVector.h LinForm.cpp LinForm.h menuLinForm.cpp menuLinForm.h baseFunc.h baseFunc.cpp test.cpp test.h Polynomial.cpp Polynomial.h)